--- a/template/nav.html
+++ b/template/nav.html
@@ -1,23 +1,26 @@
 <!-- nav -->
-<nav class="grey">
-    <div class="nav-wrapper" style="padding-left: 1em;">
+<nav class="blue-grey">
+    <div class="nav-wrapper container" style="padding-left: 1em;">
         <a href="#!" class="brand-logo">CC FED</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse">
             <i class="fa fa-bars"></i>
         </a>
         <ul class="right hide-on-med-and-down">
-            <li class="active"><a href="tools.html">tools</a></li>
-            <li><a href="css-frameworks.html">css-frameworks</a></li>
-            <li><a href="js-frameworks.html">js-frameworks</a></li>
-            <li><a href="design.html">design</a></li>
-            <li><a href="about-me.html">about-me</a></li>
+            <li class="active"><a href="modules/tools/tools.html">tools</a></li>
+            <li><a href="modules/css-frameworks/css-frameworks.html">css-frameworks</a></li>
+            <li><a href="modules/js-frameworks/js-frameworks.html">js-frameworks</a></li>
+            <li><a href="modules/design/design.html">design</a></li>
+            <li><a href="modules/about-me/about-me.html">about-me</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
-            <li class="active"><a href="tools.html">tools</a></li>
-            <li><a href="css-frameworks.html">css-frameworks</a></li>
-            <li><a href="js-frameworks.html">js-frameworks</a></li>
-            <li><a href="design.html">design</a></li>
-            <li><a href="about-me.html">about-me</a></li>
+            <li class="active"><a href="modules/tools/tools.html">tools</a></li>
+            <li><a href="modules/css-frameworks/css-frameworks.html">css-frameworks</a></li>
+            <li><a href="modules/js-frameworks/js-frameworks.html">js-frameworks</a></li>
+            <li><a href="modules/design/design.html">design</a></li>
+            <li><a href="modules/about-me/about-me.html">about-me</a></li>
         </ul>
     </div>
 </nav>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/Materialize/dist/js/materialize.min.js"></script>
+<script src="basic-js/basic.js"></script>
